Back In Time

Version 0.9
* better separation between common and gnome specific files
* bug fix: when you open snapshots dialog for the second time ( or more ) and you make a diff 
  it will make the diff on the file for the first dialog ( all previous dialogs ) and then for 
  the current one

Version 0.8.20
* bug fix: sorting files/directories by name is now case insensitive
* getmessages.sh: ignore "gtk-" items (this are gtk stock item ids and should not be changed)

Version 0.8.18
* update man/docbook
* add sort columns in MainWindow/FileView (by name, by size or by date) and SnapshotsDialog (by date)
* fix German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)

Version 0.8.16
* add Drag & Drop from MainWindow:FileView/SnapshotsDialog to Nautilus
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)

Version 0.8.14
* add more command line parameters ( --version, --snapshots, --help )
* fix a crush for getting info on dead symbolic links
* when taking a new backup based on the previous one don't copy the previous extra info (ex: name)
* copy unsafe links when taking a snapshot

Version 0.8.12
* add German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* add SnapshotNameDialog
* add Name/Remove snapshot in main toolbar
* change the way it detects if the mainwindow is the ative window (no dialogs)
* toolbars: show icons only
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.10
* SnapshotsDialog: add right-click popup-menu and a toolbar with copy & restore buttons
* use a more robust backup lock file
* log using syslog
* fix a small bug in copy to clipboard
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.8
* SnapshotsDialog: add diff
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.8.6
* fix change backup path crush