@@ -1,3 +1,2 @@
 TODO:
-* divide backintime package in backintime-common & backintime-gnome
 * add a QT4 GUI
