@@ -33,7 +33,7 @@ gettext.textdomain( 'backintime' )
 
 class Config( configfile.ConfigFile ):
 	APP_NAME = 'Back In Time'
-	VERSION = '0.9beta2'
+	VERSION = '0.9beta4'
 
 	NONE = 0
 	_5_MIN = 2
