@@ -1,5 +1,5 @@
 Package: backintime-common
-Version: 0.9beta2
+Version: 0.9beta4
 Section: utils
 Maintainer: Oprea Dan <dan@le-web.org>
 Architecture: all
