@@ -1,7 +1,7 @@
 Package: backintime-gnome
-Version: 0.9beta2
+Version: 0.9beta4
 Section: gnome
 Maintainer: Oprea Dan <dan@le-web.org>
 Architecture: all
-Depends: python-glade2, python-gnome2, meld, backintime-common (= 0.9beta2)
+Depends: python-glade2, python-gnome2, meld, backintime-common (= 0.9beta4)
 Description: Simple backup system for GNOME Desktop
