@@ -5,6 +5,7 @@ Version 0.9
 * bug fix: when you open snapshots dialog for the second time ( or more ) and you make a diff 
   it will make the diff on the file for the first dialog ( all previous dialogs ) and then for 
   the current one
+* divide backintime package in backintime-common & backintime-gnome
 
 Version 0.8.20
 * bug fix: sorting files/directories by name is now case insensitive
